cluster/apps/home-automation/appdaemon/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: appdaemon-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`appd.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: appdaemon-appdaemon
          port: 5050
          scheme: http
      middlewares:
        - name: traefik-forward-auth
          namespace: networking
    - match: Host(`appd-config.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: appdaemon-appdaemon-codeserver
          port: 12321
      middlewares:
        - name: traefik-forward-auth
          namespace: networking
  tls:
    secretName: "${SECRET_CERTIFICATE_DEFAULT}"
