cluster/apps/home-automation/appdaemon/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: hass-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  rules:
    - host: appd.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: appdeamon-appdaemon
                port:
                  number: 5050
  # tls:
  #   - secretName: "${SECRET_CERTIFICATE_DEFAULT}"
  #     hosts:
  #       - .${SECRET_DOMAIN}
